add dep bs + move sshot

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,5 +1,5 @@
 
-@import "../../ressources/scss/bootstrap-cey.scss";
+@import "./bootstrap-cey.scss";
 // @import "../../ressources/normalize";
 
 
