--- a/src/css/bootstrap-cey.scss
+++ b/src/css/bootstrap-cey.scss
@@ -32,13 +32,13 @@
 @import "../../node_modules/bootstrap/scss/alert";
 @import "../../node_modules/bootstrap/scss/progress";
 // @import "../../node_modules/bootstrap/scss/media";
-// @import "../../node_modules/boot../../node_modules/bootstrap/scss/strap/scss/list-group";
-// @import "../../node_modules/boot../../node_modules/bootstrap/scss/strap/scss/close";
-// @import "../../node_modules/boot../../node_modules/bootstrap/scss/strap/scss/toasts";
-// @import "../../node_modules/boot../../node_modules/bootstrap/scss/strap/scss/modal";
-// @import "../../node_modules/boot../../node_modules/bootstrap/scss/strap/scss/tooltip";
-// @import "../../node_modules/boot../../node_modules/bootstrap/scss/strap/scss/popover";
-// @import "../../node_modules/boot../../node_modules/bootstrap/scss/strap/scss/carousel";
-// @import "../../node_modules/boot../../node_modules/bootstrap/scss/strap/scss/spinners";
+// @import "../../node_modules/bootstrap/scss/list-group";
+// @import "../../node_modules/bootstrap/scss/close";
+// @import "../../node_modules/bootstrap/scss/toasts";
+@import "../../node_modules/bootstrap/scss/modal";
+// @import "../../node_modules/bootstrap/scss/tooltip";
+// @import "../../node_modules/bootstrap/scss/popover";
+// @import "../../node_modules/bootstrap/scss/carousel";
+// @import "../../node_modules/bootstrap/scss/spinners";
 @import "../../node_modules/bootstrap/scss/utilities";
 // @import "../../node_modules/bootstrap/scss/print";
